Javadoc for commons-iterators:1.1.5

--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -24,8 +24,11 @@
 <li><a href="net/markenwerk/commons/iterators/EmptyIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">EmptyIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FilteringIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FilteringIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FloatArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/InfixingIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfixingIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IntegerArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LongArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators" target="classFrame"><span class="interfaceName">LookAhead</span></a></li>
+<li><a href="net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LookAheadIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullFreeIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullSaveIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ObjectIterator</a></li>
