--- a/net/markenwerk/commons/iterators/CombinedIterator.html
+++ b/net/markenwerk/commons/iterators/CombinedIterator.html
@@ -116,7 +116,7 @@ var activeTableTab = "activeTableTab";
 </dl>
 <hr>
 <br>
-<pre>public class <span class="typeNameLabel">CombinedIterator&lt;Payload&gt;</span>
+<pre>public final class <span class="typeNameLabel">CombinedIterator&lt;Payload&gt;</span>
 extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?is-external=true" title="class or interface in java.lang">Object</a>
 implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;Payload&gt;</pre>
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/CombinedIterator.html" title="class in net.markenwerk.commons.iterators"><code>CombinedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that wraps arround some
