--- a/net/markenwerk/commons/iterators/FilteringIterator.html
+++ b/net/markenwerk/commons/iterators/FilteringIterator.html
@@ -116,7 +116,7 @@ var activeTableTab = "activeTableTab";
 </dl>
 <hr>
 <br>
-<pre>public class <span class="typeNameLabel">FilteringIterator&lt;Payload&gt;</span>
+<pre>public final class <span class="typeNameLabel">FilteringIterator&lt;Payload&gt;</span>
 extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?is-external=true" title="class or interface in java.lang">Object</a>
 implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;Payload&gt;</pre>
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/FilteringIterator.html" title="class in net.markenwerk.commons.iterators"><code>FilteringIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -258,7 +258,7 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
             <a href="../../../../net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators"><code>NullFreeIterator</code></a> will be wrapped.</dd>
 <dd><code>predicate</code> - The <a href="https://markenwerk.github.io/java-commons-interfaces/net/markenwerk/commons/interfaces/Predicate.html?is-external=true" title="class or interface in net.markenwerk.commons.interfaces"><code>Predicate</code></a> to <a href="https://markenwerk.github.io/java-commons-interfaces/net/markenwerk/commons/interfaces/Predicate.html?is-external=true#test-Subject-" title="class or interface in net.markenwerk.commons.interfaces"><code>test</code></a>
             every value yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> with.</dd>
-<dd><code>invertPredicate</code> - Whether to invert the test result and yielt values that don't
+<dd><code>invertPredicate</code> - Whether to invert the test result and yield values that don't
             satisfy the given <a href="https://markenwerk.github.io/java-commons-interfaces/net/markenwerk/commons/interfaces/Predicate.html?is-external=true" title="class or interface in net.markenwerk.commons.interfaces"><code>Predicate</code></a>.</dd>
 </dl>
 </li>
