--- a/net/markenwerk/commons/iterators/package-frame.html
+++ b/net/markenwerk/commons/iterators/package-frame.html
@@ -11,6 +11,10 @@
 <body>
 <h1 class="bar"><a href="../../../../net/markenwerk/commons/iterators/package-summary.html" target="classFrame">net.markenwerk.commons.iterators</a></h1>
 <div class="indexContainer">
+<h2 title="Interfaces">Interfaces</h2>
+<ul title="Interfaces">
+<li><a href="LookAhead.html" title="interface in net.markenwerk.commons.iterators" target="classFrame"><span class="interfaceName">LookAhead</span></a></li>
+</ul>
 <h2 title="Classes">Classes</h2>
 <ul title="Classes">
 <li><a href="ArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ArrayIterator</a></li>
@@ -25,8 +29,10 @@
 <li><a href="EmptyIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">EmptyIterator</a></li>
 <li><a href="FilteringIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FilteringIterator</a></li>
 <li><a href="FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FloatArrayIterator</a></li>
+<li><a href="InfixingIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfixingIterator</a></li>
 <li><a href="IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IntegerArrayIterator</a></li>
 <li><a href="LongArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LongArrayIterator</a></li>
+<li><a href="LookAheadIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LookAheadIterator</a></li>
 <li><a href="NullFreeIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullFreeIterator</a></li>
 <li><a href="NullSaveIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullSaveIterator</a></li>
 <li><a href="ObjectIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ObjectIterator</a></li>
