--- a/net/markenwerk/commons/iterators/package-summary.html
+++ b/net/markenwerk/commons/iterators/package-summary.html
@@ -74,6 +74,25 @@
 <div class="contentContainer">
 <ul class="blockList">
 <li class="blockList">
+<table class="typeSummary" border="0" cellpadding="3" cellspacing="0" summary="Interface Summary table, listing interfaces, and an explanation">
+<caption><span>Interface Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colFirst" scope="col">Interface</th>
+<th class="colLast" scope="col">Description</th>
+</tr>
+<tbody>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators">LookAhead</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><code>LookAhead</code></a> is a simple container that holds the
+ <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html#get--"><code>current</code></a> and the <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html#getNext--"><code>next</code></a>
+ payload object of an <a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><code>LookAheadIterator</code></a>.</div>
+</td>
+</tr>
+</tbody>
+</table>
+</li>
+<li class="blockList">
 <table class="typeSummary" border="0" cellpadding="3" cellspacing="0" summary="Class Summary table, listing classes, and an explanation">
 <caption><span>Class Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
@@ -170,17 +189,33 @@
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/InfixingIterator.html" title="class in net.markenwerk.commons.iterators">InfixingIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/InfixingIterator.html" title="class in net.markenwerk.commons.iterators"><code>InfixingIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around a
+ given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and yields a given infix between every object yielded
+ by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>IntegerArrayIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that iterates over a
  given <code>int[]</code>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>LongArrayIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that iterates over a given
  <code>long[]</code>.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators">LookAheadIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><code>LookAheadIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped
+ around a given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and yields a <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><code>LookAhead</code></a> container that
+ holds the current and the next payload value of the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
 <tr class="altColor">
