--- a/net/markenwerk/commons/iterators/package-use.html
+++ b/net/markenwerk/commons/iterators/package-use.html
@@ -71,7 +71,29 @@
 <div class="header">
 <h1 title="Uses of Package net.markenwerk.commons.iterators" class="title">Uses of Package<br>net.markenwerk.commons.iterators</h1>
 </div>
-<div class="contentContainer">No usage of net.markenwerk.commons.iterators</div>
+<div class="contentContainer">
+<ul class="blockList">
+<li class="blockList"><a name="net.markenwerk.commons.iterators">
+<!--   -->
+</a>
+<table class="useSummary" border="0" cellpadding="3" cellspacing="0" summary="Use table, listing classes, and an explanation">
+<caption><span>Classes in <a href="../../../../net/markenwerk/commons/iterators/package-summary.html">net.markenwerk.commons.iterators</a> used by <a href="../../../../net/markenwerk/commons/iterators/package-summary.html">net.markenwerk.commons.iterators</a></span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colOne" scope="col">Class and Description</th>
+</tr>
+<tbody>
+<tr class="altColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/iterators/class-use/LookAhead.html#net.markenwerk.commons.iterators">LookAhead</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><code>LookAhead</code></a> is a simple container that holds the
+ <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html#get--"><code>current</code></a> and the <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html#getNext--"><code>next</code></a>
+ payload object of an <a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><code>LookAheadIterator</code></a>.</div>
+</td>
+</tr>
+</tbody>
+</table>
+</li>
+</ul>
+</div>
 <!-- ======= START OF BOTTOM NAVBAR ====== -->
 <div class="bottomNav"><a name="navbar.bottom">
 <!--   -->
