--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -24,8 +24,11 @@
 <li><a href="net/markenwerk/commons/iterators/EmptyIterator.html" title="class in net.markenwerk.commons.iterators">EmptyIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FilteringIterator.html" title="class in net.markenwerk.commons.iterators">FilteringIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators">FloatArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/InfixingIterator.html" title="class in net.markenwerk.commons.iterators">InfixingIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><span class="interfaceName">LookAhead</span></a></li>
+<li><a href="net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators">LookAheadIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators">NullFreeIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators">NullSaveIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators">ObjectIterator</a></li>
