--- a/net/markenwerk/commons/iterators/ConvertingIterator.html
+++ b/net/markenwerk/commons/iterators/ConvertingIterator.html
@@ -117,7 +117,7 @@ var activeTableTab = "activeTableTab";
 </dl>
 <hr>
 <br>
-<pre>public class <span class="typeNameLabel">ConvertingIterator&lt;From,To&gt;</span>
+<pre>public final class <span class="typeNameLabel">ConvertingIterator&lt;From,To&gt;</span>
 extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?is-external=true" title="class or interface in java.lang">Object</a>
 implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;To&gt;</pre>
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/ConvertingIterator.html" title="class in net.markenwerk.commons.iterators"><code>ConvertingIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped
