--- a/net/markenwerk/commons/iterators/LongArrayIterator.html
+++ b/net/markenwerk/commons/iterators/LongArrayIterator.html
@@ -49,7 +49,7 @@ var activeTableTab = "activeTableTab";
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?net/markenwerk/commons/iterators/LongArrayIterator.html" target="_top">Frames</a></li>
@@ -332,7 +332,7 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?net/markenwerk/commons/iterators/LongArrayIterator.html" target="_top">Frames</a></li>
