Javadoc for commons-iterators:2.2.0

--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -25,6 +25,7 @@
 <li><a href="net/markenwerk/commons/iterators/EnumerationIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">EnumerationIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FilteredIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FilteredIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FloatArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IndexedIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfixedIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IntegerArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LongArrayIterator</a></li>
