--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -25,6 +25,7 @@
 <li><a href="net/markenwerk/commons/iterators/EnumerationIterator.html" title="class in net.markenwerk.commons.iterators">EnumerationIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FilteredIterator.html" title="class in net.markenwerk.commons.iterators">FilteredIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators">FloatArrayIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators">IndexedIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators">InfixedIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></li>
