--- a/net/markenwerk/commons/iterators/PrefixedIterator.html
+++ b/net/markenwerk/commons/iterators/PrefixedIterator.html
@@ -279,10 +279,13 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
 <ul class="blockListLast">
 <li class="blockList">
 <h4>remove</h4>
-<pre>public&nbsp;void&nbsp;remove()</pre>
+<pre>public&nbsp;void&nbsp;remove()
+            throws <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/IllegalStateException.html?is-external=true" title="class or interface in java.lang">IllegalStateException</a></pre>
 <dl>
 <dt><span class="overrideSpecifyLabel">Specified by:</span></dt>
 <dd><code><a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true#remove--" title="class or interface in java.util">remove</a></code>&nbsp;in interface&nbsp;<code><a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;<a href="../../../../net/markenwerk/commons/iterators/PrefixedIterator.html" title="type parameter in PrefixedIterator">Payload</a>&gt;</code></dd>
+<dt><span class="throwsLabel">Throws:</span></dt>
+<dd><code><a href="http://docs.oracle.com/javase/8/docs/api/java/lang/IllegalStateException.html?is-external=true" title="class or interface in java.lang">IllegalStateException</a></code></dd>
 </dl>
 </li>
 </ul>
