--- a/net/markenwerk/commons/iterators/package-frame.html
+++ b/net/markenwerk/commons/iterators/package-frame.html
@@ -31,6 +31,7 @@
 <li><a href="EnumerationIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">EnumerationIterator</a></li>
 <li><a href="FilteredIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FilteredIterator</a></li>
 <li><a href="FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FloatArrayIterator</a></li>
+<li><a href="IndexedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IndexedIterator</a></li>
 <li><a href="InfixedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfixedIterator</a></li>
 <li><a href="IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IntegerArrayIterator</a></li>
 <li><a href="LongArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LongArrayIterator</a></li>
