--- a/net/markenwerk/commons/iterators/package-summary.html
+++ b/net/markenwerk/commons/iterators/package-summary.html
@@ -205,6 +205,15 @@
 </td>
 </tr>
 <tr class="rowColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators">IndexedIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators"><code>IndexedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
+ a given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and every value yielded by the given
+ <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> as an <a href="https://markenwerk.github.io/java-commons-datastructures/net/markenwerk/commons/datastructures/Entry.html?is-external=true" title="class or interface in net.markenwerk.commons.datastructures"><code>Entry</code></a> whose key is the index of the yielded
+ element.</div>
+</td>
+</tr>
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators">InfixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>InfixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -212,21 +221,21 @@
  value yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>IntegerArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>int[]</code>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>LongArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>long[]</code>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators">LookAheadIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><code>LookAheadIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be wrapped around
@@ -234,14 +243,14 @@
  the current and the next payload value of the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators">NullFreeIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators"><code>NullFreeIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
  a given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and filters out null values.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators">NullSaveIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators"><code>NullSaveIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -250,14 +259,14 @@
  <a href="../../../../net/markenwerk/commons/iterators/EmptyIterator.html" title="class in net.markenwerk.commons.iterators"><code>EmptyIterator</code></a>).</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators">ObjectIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators"><code>ObjectIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates over a single
  payload object.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/OptionalIterator.html" title="class in net.markenwerk.commons.iterators">OptionalIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/OptionalIterator.html" title="class in net.markenwerk.commons.iterators"><code>OptionalIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that behaves like an
@@ -265,7 +274,7 @@
  <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>, if the given payload object is null.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators">PrefixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>PrefixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -273,7 +282,7 @@
  all values yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators">ProtectingIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators"><code>ProtectingIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be
@@ -283,7 +292,7 @@
  <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators">RemoveHandlerIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators"><code>RemoveHandlerIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped
@@ -292,14 +301,14 @@
  for the current value.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators">ShortArrayIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>ShortArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>short[]</code>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators">StringTokenizerIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators"><code>StringTokenizerIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be wrapped
@@ -307,7 +316,7 @@
  given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/StringTokenizer.html?is-external=true" title="class or interface in java.util"><code>StringTokenizer</code></a>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/SuffixedIterator.html" title="class in net.markenwerk.commons.iterators">SuffixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/SuffixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>SuffixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
