--- a/net/markenwerk/commons/iterators/InfixedIterator.html
+++ b/net/markenwerk/commons/iterators/InfixedIterator.html
@@ -48,7 +48,7 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
@@ -279,10 +279,13 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
 <ul class="blockListLast">
 <li class="blockList">
 <h4>remove</h4>
-<pre>public&nbsp;void&nbsp;remove()</pre>
+<pre>public&nbsp;void&nbsp;remove()
+            throws <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/IllegalStateException.html?is-external=true" title="class or interface in java.lang">IllegalStateException</a></pre>
 <dl>
 <dt><span class="overrideSpecifyLabel">Specified by:</span></dt>
 <dd><code><a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true#remove--" title="class or interface in java.util">remove</a></code>&nbsp;in interface&nbsp;<code><a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;<a href="../../../../net/markenwerk/commons/iterators/InfixedIterator.html" title="type parameter in InfixedIterator">Payload</a>&gt;</code></dd>
+<dt><span class="throwsLabel">Throws:</span></dt>
+<dd><code><a href="http://docs.oracle.com/javase/8/docs/api/java/lang/IllegalStateException.html?is-external=true" title="class or interface in java.lang">IllegalStateException</a></code></dd>
 </dl>
 </li>
 </ul>
@@ -313,7 +316,7 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
